tests/negative/gold/index_call_test.gold
tests/negative/index_call_test.toit:7:7: error: Can't call result of evaluating expression
  data[pos++] 499
      ^
tests/negative/index_call_test.toit:7:8: error: Can't assign to unknown 'pos'
  data[pos++] 499
       ^~~
Compilation failed.
